--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@ngrx/router-store": "^4.1.1",
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
+    "@types/socket.io": "^1.4.31",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.2",
+    "socket.io": "^2.0.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
