--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "reselect": "^3.0.1",
     "rxjs": "^5.5.2",
     "socket.io": "^2.0.4",
     "zone.js": "^0.8.14"
